<resources>
    <string name="app_name">Space App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Space App</string>
    <string name="nav_header_subtitle">Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuración</string>

    <string name="menu_home">Sistema Solar</string>
    <string name="menu_stars">Estrellas</string>
    <string name="menu_constelaciones">Constelaciones</string>
    <string name="menu_galaxy">Galaxias</string>
    <string name="menu_moons">Lunas</string>
    <string name="menu_missions">Misiones Espaciales</string>
</resources>
